--- a/style.css
+++ b/style.css
@@ -9,6 +9,6 @@ body {
 }
 
 .box {
-    background-image: url(../Selium/background.jpg);
+    background-image: url(background.jpg);
     padding: 350px;
 }
